casuarina: recovery: Import bg1.25 TERM and set it as default globally * this fixes nano non starting on OrangeFox's embedded Terminal due to   missing terminal info * according to [1] this is the most compatible TERM that fixes any text   editor displaying.
[1] TeamWin/android_bootable_recovery@546ebc3

--- a/recovery/root/init.recovery.qcom.rc
+++ b/recovery/root/init.recovery.qcom.rc
@@ -35,6 +35,9 @@ on fs
     wait /dev/block/platform/soc/${ro.boot.bootdevice}
     symlink /dev/block/platform/soc/${ro.boot.bootdevice} /dev/block/bootdevice
 
+    export TERMINFO /system/etc/terminfo
+    export TERM bg1.25
+
     # Always start keymaster to silence logspam
     start qseecomd
     exec u:r:recovery:s0 -- /system/bin/sleep 1s
